@@ -119,6 +119,9 @@ A:hover	{ color: #C0C0C0; }
 	  color: red; 
 	  font-size: 12px; 
 	}
+.attention  /*voting instructions */
+	{
+	}
 .headbox  /* box around the page headers */
 	{
 	}
@@ -165,6 +168,15 @@ A:hover	{ color: #C0C0C0; }
 .nav    /* used in navigation bars */
 	{
 	  font-size: 12px;
+	}
+.bordertop
+	{
+	}
+.borderright
+	{
+	}
+.borderleft
+	{
 	}
 .fineprint  /* used for fine print */
 	{ 
