@@ -4,5 +4,4 @@
 */
 BODY
 	{ 
-	  color: #000000;
 	}
