@@ -2,7 +2,6 @@
    default text styles - background and colors overriden by
    album 'bgcolor', 'background', and 'textcolor' properties.
 */
-BODY  
+BODY
 	{ 
-	  color: #000000;
 	}
