@@ -1,41 +1,7 @@
-/* This is the default style sheet used by the Gallery when
-   it is running as a standalone product.  
-
-   If you would like to customize the styles please create 
-   copy of this file called 
-
-     "standalone_style.css" (same name without ".default")
-
-   If that file is found in this directory it will be 
-   used instead of this one.
-
-   Some of the styles below are overriden by specific 
-   album properties. These are noted.
-
-   NOTE:  When Gallery is running standalone it still loads
-   embedded_style as a baseline, but you can override those
-   settings here.
-*/ 
-
-/* 
-   link colors - overridden by the album 'linkcolor' property.
-*/
-A:link, A:visited, A:active 
-	{ color: #333366; }
-A:hover 
-	{ color: #336666; }
-
 /* 
    default text styles - background and colors overriden by
    album 'bgcolor', 'background', and 'textcolor' properties.
 */
-BODY  
+BODY
 	{ 
-	  background-color: white;
-	  color: #000000;
 	}
-TD, P 
-	{ 
-	  color: #000000;
-	}
-
