@@ -1,3 +1,8 @@
+2003-10-01  John Kirkland <jpk@bl.org> DEV_1_4_1_skins-cvs-b14
+
+	* added attention, borderleft, borderright, & bordertop
+	  to all skins
+
 2003-10-03 Joan McGalliard  <gallery@joanhenge.plus.com> DEV_1_4_1_skins-cvs-b13
 
  	* Fixed bug in offline slideshow.  Identical to 1.3.5-cvs-b18 bug.
